# PhdHaloRSG

./: .dockerignore  .gitattributes  .gitignore  Makefile  README.md  SETUP.md  bootstrap_env.sh  compose.yml  prepare_python.sh  setup_wsl_ubuntu_qemu.ps1
.devcontainer/: devcontainer.json
apps/bare-hart3/: CMakeLists.txt  Makefile  linker.ld  main.c
apps/bare-hart3/src/: main.c  uart.c  uart.h
apps/bare-hart4/: CMakeLists.txt  Makefile  linker.ld
apps/bare-hart4/src/: main.c  start.S  uart.c
apps/freertos-hart2/: CMakeLists.txt  FreeRTOSConfig.h  Makefile  Makefile.legacy  hart_freertos.ld  linker.ld  stdlib.h  string.h
apps/zephyr-hart1/: CMakeLists.txt  Makefile
apps/zephyr-hart1/zephyr/: CMakeLists.txt  prj.conf  west.yml
apps/zephyr-hart1/zephyr/boards/: hifive_unmatched.overlay  qemu_riscv64.conf  qemu_riscv64.overlay
apps/zephyr-hart1/zephyr/src/: main.c
boot/hart0/: CMakeLists.txt  Makefile  hart_boot.c  hart_boot.h  ipc.c  ipc.h  linker.ld  linker_mmode.ld  main.c  partition.c  partition.h  start.S  uart.c  uart.h
config/: amp_layout.json
docker/: Dockerfile  entrypoint.sh
docs/: _config.yml  index.md
docs/API/: index.md
docs/Examples/: example.puml  harts-system-view.puml  index.md  workshop.txt
docs/GettingStarted/: index.md
docs/Integration/: index.md
docs/introduction/: index.md
docs/stylesheets/: dark-theme.css
halo/: halo-0.1.1-py3-none-any.whl
halo_dist/: build_n_install_all.sh  halo-0.1.1-py3-none-any.whl  halo-0.1.2-py3-none-any.whl
halo_dist/hadls/: battery_charging_system.adl  battery_charging_system.hml  battery_charging_system.iddl  battery_charging_system.idl
halo_dist/protocols/: .gitignore  build_n_install_all.sh  halo_proto_blackboard-0.1.0-py3-none-any.whl  halo_proto_eventchannel-0.1.0-py3-none-any.whl  halo_proto_sharedmemory-0.1.0-py3-none-any.whl
halo_dist/protocols/halo-proto-sharedmemory/: README.md  pyproject.toml
halo_dist/protocols/halo-proto-sharedmemory/src/halo_proto_sharedmemory/: __init__.py  config.py  render.py
halo_dist/protocols/halo-proto-sharedmemory/src/halo_proto_sharedmemory/templates/: sharedmemory_baremetal.h.j2  sharedmemory_common.h.j2  sharedmemory_crc.c.j2  sharedmemory_crc.h.j2  sharedmemory_impl.c.j2  sharedmemory_linux.h.j2  sharedmemory_riscv64_h1_zephyr.c.j2  sharedmemory_riscv64_h2_freertos.c.j2  sharedmemory_riscv64_h2_freertos.h.j2  sharedmemory_riscv64_h3_baremetal.c.j2  sharedmemory_riscv64_h4_linux.c.j2  sharedmemory_stm32.c.j2  sharedmemory_stm32.h.j2  sharedmemory_zephyr.c.j2  sharedmemory_zephyr.h.j2
halo_dist/protocols/halo_proto_blackboard/: README.md  pyproject.toml
halo_dist/protocols/halo_proto_blackboard/src/halo_proto_blackboard/: __init__.py  config.py  render.py
halo_dist/protocols/halo_proto_blackboard/src/halo_proto_blackboard/templates/: blackboard_baremetal.c.j2  blackboard_common.c.j2  blackboard_common.h.j2  blackboard_crc.c.j2  blackboard_crc.h.j2  blackboard_freertos.c.j2  blackboard_riscv64_h1_zephyr.c.j2  blackboard_riscv64_h2_freertos.c.j2  blackboard_riscv64_h2_freertos.h.j2  blackboard_riscv64_h3_baremetal.h.j2  blackboard_riscv64_h4_linux.c.j2  blackboard_riscv64_h4_linux.h.j2  blackboard_stm32.c.j2
halo_dist/protocols/halo_proto_eventchannel/: .gitignore  README.md  pyproject.toml
halo_dist/protocols/halo_proto_eventchannel/src/halo_proto_eventchannel/: __init__.py  config.py  render.py
halo_dist/protocols/halo_proto_eventchannel/src/halo_proto_eventchannel/templates/: eventchannel_common.c.j2  eventchannel_common.h.j2  eventchannel_freertos.c.j2  eventchannel_riscv64_h1_zephyr.c.j2  eventchannel_riscv64_h3_baremetal.c.j2  eventchannel_riscv64_h4_linux.c.j2  eventchannel_stm32.h.j2
include/: memmap.h
src/: memory_layout.h  shared_memory.h  workshop_protocol.h
src/battery/: battery.c  battery.h  battery_config.h
src/bms/: bms.c  bms.h  breaker.c  breaker.h  config_bms.h
src/common/: charge_ctrl.c  charge_ctrl.h  console_lock.c  console_lock.h  safety_eval.c  safety_eval.h  uart.c  uart.h  workshop_protocol.h
src/device-tree/: hifive-unmatched.dts
src/platform/: platform.h
src/virt-drivers/: battery_temp.c  battery_temp.h  cbreaker.c  cbreaker.h  current_acq.c  current_acq.h  inverter_temp.c  inverter_temp.h  voltage_acq.c  voltage_acq.h
tools/console/: qemu_apps_console.py
tools/scripts/: amp_layout.py  bootstrap_env.sh  build.sh  build_buildroot_linux_amp.sh  build_buildroot_linux_amp_fast.sh  build_freertos_hart2.sh  build_opensbi_amp.sh  build_zephyr_hart1.sh  halo_generate_all.sh  run_qemu_hart0_loader.sh  run_qemu_hart0_mmode.sh  run_qemu_hart0_preload.sh  run_qemu_linux_amp.sh  run_qemu_multihart.sh  save_buildroot_artifacts.sh  setup_all.sh  setup_buildroot_deps.sh  setup_dev_env.sh  setup_freertos_deps.sh  setup_opensbi_deps.sh  setup_zephyr_deps.sh  (+2 more)
workshop_design/: brungup_flow.puml  normal_comm_flow.puml  render_puml_svg.sh  safety_flow.puml  system_design.puml  system_specification.html
(+19 files in other folders)
