[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "halo_proto_eventchannel"
version = "0.1.0"
description = "Event Channel Protocol"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "jinja2>=3.0.0",
]

[project.entry-points."halo.protocol_generators"]
eventchannel = "halo_proto_eventchannel.config:get_protocol_config"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
halo_proto_eventchannel = [
    "templates/**/*.j2",
]